--- a/nginx.conf
+++ b/nginx.conf
@@ -2,27 +2,14 @@ events {
 }
 
 http {
-	upstream shard1 {
+	upstream backend {
 		server www.yahoo.fr;
-	}
-
-	upstream shard2 {
 		server www.google.fr;
 	}
 
-	map $arg_channel $channel {
-		s1 s1;
-		s2 s2;
-	}
-
-	map $channel $shard {
-		s1 shard1;
-		s2 shard2;
-	}
-	
 	server {
 		location / {
-			proxy_pass http://$shard;
+			proxy_pass http://backend;
 		}
 	}
 }
