--- a/nginx.upstream.conf
+++ b/nginx.upstream.conf
@@ -1,7 +1,7 @@
-# > docker run --rm -it --name b1 -p 8081:80 -v C:\gh\nginxdemo\nginx.basic.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
-# > docker run --rm -it --name b2 -p 8082:80 -v C:\gh\nginxdemo\nginx.basic.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
-# configure b1 and b2 ip via docker inspect : > docker network inspect bridge
-# > docker run --rm -it --name lb -p 8080:80 -v C:\gh\nginxdemo\nginx.upstream.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
+# > docker network create ng
+# > docker run --rm -it --name b1 --net=ng -p 8081:80 -v C:\gh\nginxdemo\nginx.basic.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
+# > docker run --rm -it --name b2 --net=ng -p 8082:80 -v C:\gh\nginxdemo\nginx.basic.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
+# > docker run --rm -it --name lb --net=ng -p 8080:80 -v C:\gh\nginxdemo\nginx.upstream.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
 
 
 events {
@@ -11,8 +11,8 @@ http {
 	upstream backend {
 		# http://nginx.org/en/docs/http/ngx_http_upstream_module.html#server
 		
-		server 172.17.0.2:80 max_fails=1;
-		server 172.17.0.4:80 max_fails=1;
+		server b1;
+		server b2;
 	}
 
 	server {
