--- a/nginx.sharding.conf
+++ b/nginx.sharding.conf
@@ -1,3 +1,5 @@
+# > docker run --rm -it --name sharding -p 8080:80 -v C:\gh\nginxdemo\nginx.sharding.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
+
 events {
 }
 
@@ -23,6 +25,6 @@ http {
 	server {
 		location / {
 			proxy_pass http://$shard;
-		}
+		}		
 	}
 }
