--- a/nginx.basic.conf
+++ b/nginx.basic.conf
@@ -1,3 +1,5 @@
+# > docker run --rm -it --name basic -p 8080:80 -v C:\gh\nginxdemo\nginx.basic.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
+
 events {
 }
 
