--- a/nginx.basic.conf
+++ b/nginx.basic.conf
@@ -8,7 +8,8 @@ http {
 		listen       80;
         server_name  localhost;
         location / {
-          root /data/www;
+          add_header X-hostname "$hostname";
+		  root /data/www;
         }
     }
 }
