--- a/nginx.forward-proxy.conf
+++ b/nginx.forward-proxy.conf
@@ -1,13 +1,13 @@
-# > docker run --rm -it --name fp -p 8080:80 -v C:\gh\nginxdemo\nginx.forward-proxy.conf:/etc/nginx/nginx.conf:ro nginx
+# > docker run --rm -it --name fp -p 9898:9898 -v C:\gh\nginxdemo\nginx.forward-proxy.conf:/etc/nginx/nginx.conf:ro nginx
 events {
 }
 
 http {
     server {
-        #listen       8888;
+        listen       9898;
 
         location / {
-            resolver 8.8.8.8; # may or may not be necessary.
+            resolver 8.8.8.8; # necessary for external use. 
             proxy_pass http://$http_host$uri$is_args$args;
         }
     }
