--- a/nginx.forward-proxy.conf
+++ b/nginx.forward-proxy.conf
@@ -8,7 +8,7 @@ http {
 
         location / {
             resolver 8.8.8.8; # necessary for external use. 
-            proxy_pass http://$http_host$uri$is_args$args;
+            proxy_pass $scheme://$http_host$uri$is_args$args;
         }
     }
 }
