--- a/nginx.httpsproxy.conf
+++ b/nginx.httpsproxy.conf
@@ -1,5 +1,5 @@
 # vim:syntax=nginx filetype=nginx
-# > docker run --rm -it --name httpsproxies -p 9004:9004 -v C:\gh\nginxdemo\nginx.httpsproxies.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
+# > docker run --rm -it --name httpsproxy -p 9004:9004 -v C:\gh\nginxdemo\nginx.httpsproxy.conf:/etc/nginx/nginx.conf:ro -v C:\gh\nginxdemo\www:/data/www:ro nginx
 events {
 }
 
@@ -15,7 +15,7 @@ http {
         location / {
             proxy_set_header X-Forwarded-Host $fwd_host;
 
-            proxy_pass https://www.google.fr;
+            proxy_pass https://host.docker.internal:5001;
 
             if ($http_bypass_proxy) {
                  proxy_pass https://$http_host;
