--- a/lb.yml
+++ b/lb.yml
@@ -1,5 +1,6 @@
-# docker-compose up --scale front=2
+# docker-compose -f lb.yml up --scale front=2
 # browse to http://localhost:8080
+# docker-compose -f lb.yml down
 
 version: "3"
   
