--- a/nginx.lb.conf
+++ b/nginx.lb.conf
@@ -4,12 +4,28 @@ events {
 }
 
 http {
+	proxy_cache_path /data/nginx/cache levels=1:2 keys_zone=cache_zone:10m max_size=10g inactive=60m use_temp_path=off;
+
+	#cache config
+	proxy_cache cache_zone;
+	proxy_cache_key $scheme$proxy_host$request_uri;
+	proxy_cache_min_uses 1;
+	proxy_cache_valid 200 301 302 120m;
+	proxy_cache_valid 404 1m;
+	
 	upstream upserver {
 		server nginxdemo_front_1;
 		server nginxdemo_front_2;
 	}
 
 	server {
+		listen 80;
+		
+		#proxy headers
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		
 		location / {
 			proxy_pass http://upserver;
 		}		
