--- a/nginx.lb.conf
+++ b/nginx.lb.conf
@@ -12,7 +12,10 @@ http {
 	proxy_cache_min_uses 1;
 	proxy_cache_valid 200 301 302 120m;
 	proxy_cache_valid 404 1m;
-	
+
+	#cache instrumentation
+	add_header X-Cache-Status $upstream_cache_status;
+
 	upstream upserver {
 		server nginxdemo_front_1;
 		server nginxdemo_front_2;
